NetBSD Problem Report #42747

From www@NetBSD.org  Fri Feb  5 07:49:54 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1ACFE63C462
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  5 Feb 2010 07:49:54 +0000 (UTC)
Message-Id: <20100205074953.BA75363B9FC@www.NetBSD.org>
Date: Fri,  5 Feb 2010 07:49:53 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Header missing in tic.c
X-Send-Pr-Version: www-1.0

>Number:         42747
>Category:       bin
>Synopsis:       Header missing in tic.c
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 05 07:50:00 +0000 2010
>Closed-Date:    Sat Feb 20 06:38:02 +0000 2010
>Last-Modified:  Sat Feb 20 06:38:02 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Cross compile on FreeBSD is not possible,while header for funtions le16dec and le16enc are missing.
>How-To-Repeat:

>Fix:
diff -u -r1.1 tic.c
--- usr.bin/tic/tic.c	3 Feb 2010 15:16:32 -0000	1.1
+++ usr.bin/tic/tic.c	5 Feb 2010 07:34:08 -0000
@@ -35,6 +35,7 @@
 __RCSID("$NetBSD: tic.c,v 1.1 2010/02/03 15:16:32 roy Exp $");

 #include <sys/types.h>
+#include <sys/endian.h>

 #include <ctype.h>
 #include <err.h>

>Release-Note:

>Audit-Trail:
From: Paul Goyette <paul@whooppee.com>
To: gnats-bugs@netbsd.org
Cc: henning.petersen@t-online.de
Subject: Re: bin/42747
Date: Fri, 19 Feb 2010 21:35:30 -0800 (PST)

 I've been looking at this and can't quite understand how this can occur.

 Can you please provide the _exact_ sequence of commands you are using to 
 build tic, and the exact error message?

 Thanks!

Responsible-Changed-From-To: bin-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Sat, 20 Feb 2010 06:09:59 +0000
Responsible-Changed-Why:
I picked it up - from hackathon13


State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sat, 20 Feb 2010 06:09:59 +0000
State-Changed-Why:
Verified and committed fix proposed by submitter


From: Paul Goyette <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42747 CVS commit: src/usr.bin/tic
Date: Sat, 20 Feb 2010 06:08:02 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Sat Feb 20 06:08:01 UTC 2010

 Modified Files:
 	src/usr.bin/tic: tic.c

 Log Message:
 Since tic is a host tool, we need to include host system header to get
 definitions of le16dec() and le16enc().

 Solves PR bin/42747 from Henning Petersen


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/usr.bin/tic/tic.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: closed->open
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sat, 20 Feb 2010 06:11:52 +0000
State-Changed-Why:
Re-opened at joerg's request


State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sat, 20 Feb 2010 06:38:02 +0000
State-Changed-Why:
It's really fixed now.  Thanks, joerg, for the clue-by-fours.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.