Since tic is a host tool, we need to include host system header to get definitions of le16dec() and le16enc().

Solves PR bin/42747 from Henning Petersen